--- a/MindPal/Home/View/Base.lproj/Main.storyboard
+++ b/MindPal/Home/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,20 +15,20 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MindPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mainScreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="vjd-Y8-VHN">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Coe-Cb-Lak" userLabel="Bottom View">
-                                <rect key="frame" x="0.0" y="378" width="414" height="358"/>
+                                <rect key="frame" x="0.0" y="522" width="768" height="502"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="2wu-fw-cCF">
-                                        <rect key="frame" x="103.66666666666669" y="61" width="207" height="236"/>
+                                        <rect key="frame" x="192" y="133" width="384" height="236"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wAZ-qo-Gqf">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="384" height="50"/>
                                                 <color key="backgroundColor" red="0.75214145115533004" green="0.086832042733489351" blue="0.002135690025410334" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="dn5-jb-Cdd"/>
@@ -47,7 +47,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Th1-2n-7ty">
-                                                <rect key="frame" x="0.0" y="93" width="207" height="50"/>
+                                                <rect key="frame" x="0.0" y="93" width="384" height="50"/>
                                                 <color key="backgroundColor" red="0.75214145119999998" green="0.086832042730000003" blue="0.0021356900249999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="Spi-aF-eJq"/>
@@ -58,7 +58,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eBi-fv-wod">
-                                                <rect key="frame" x="0.0" y="186" width="207" height="50"/>
+                                                <rect key="frame" x="0.0" y="186" width="384" height="50"/>
                                                 <color key="backgroundColor" red="0.75214145119999998" green="0.086832042730000003" blue="0.0021356900249999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="wQM-Jl-Cfs"/>
@@ -79,7 +79,7 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="mindPalLogo" translatesAutoresizingMaskIntoConstraints="NO" id="hNg-UU-lMa">
-                                <rect key="frame" x="-12" y="37" width="438" height="221"/>
+                                <rect key="frame" x="165" y="37" width="438" height="221"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.30840110780000002" green="0.5618229508" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -114,21 +114,44 @@
             <objects>
                 <viewController id="7Sf-Am-Iht" customClass="TrainingViewController" customModule="MindPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Fv4-Se-OCZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EIn-6h-VIt">
-                                <rect key="frame" x="0.0" y="20" width="414" height="207"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EIn-6h-VIt">
+                                <rect key="frame" x="0.0" y="20" width="768" height="322"/>
                             </imageView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KzO-RE-ohH">
+                                <rect key="frame" x="0.0" y="630" width="1122" height="682"/>
+                                <connections>
+                                    <segue destination="YKr-yH-Kfp" kind="embed" id="D6o-uo-kmM"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="EIn-6h-VIt" firstAttribute="top" secondItem="5Fr-t7-I6s" secondAttribute="top" id="46B-TE-HCl"/>
+                            <constraint firstItem="KzO-RE-ohH" firstAttribute="bottom" secondItem="5Fr-t7-I6s" secondAttribute="bottom" id="I7v-KR-ub9"/>
+                            <constraint firstItem="KzO-RE-ohH" firstAttribute="height" secondItem="Fv4-Se-OCZ" secondAttribute="height" multiplier="0.666" id="NM6-Lx-ZHe"/>
+                            <constraint firstItem="EIn-6h-VIt" firstAttribute="leading" secondItem="5Fr-t7-I6s" secondAttribute="leading" id="SF4-ZU-FCb"/>
+                            <constraint firstItem="KzO-RE-ohH" firstAttribute="top" secondItem="EIn-6h-VIt" secondAttribute="bottom" id="SsI-14-M2K"/>
+                            <constraint firstItem="KzO-RE-ohH" firstAttribute="leading" secondItem="5Fr-t7-I6s" secondAttribute="leading" id="YgP-4x-VyV"/>
+                            <constraint firstItem="KzO-RE-ohH" firstAttribute="trailing" secondItem="5Fr-t7-I6s" secondAttribute="trailing" id="hw2-gY-b8I"/>
+                            <constraint firstItem="EIn-6h-VIt" firstAttribute="trailing" secondItem="5Fr-t7-I6s" secondAttribute="trailing" id="uDF-Vo-43b"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="5Fr-t7-I6s"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KqR-hM-t3q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="960.86956521739137" y="138.58695652173915"/>
+        </scene>
+        <!--Page View Controller-->
+        <scene sceneID="keV-EV-olO">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="YKr-yH-Kfp" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sKG-ja-dW7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1719" y="238"/>
         </scene>
     </scenes>
     <resources>
